--- a/param.bib
+++ b/param.bib
@@ -345,3 +345,12 @@ title = {{“The Elephant in the Room”: Exploring Natural Mortality Uncertaint
 volume = {7},
 year = {2020}
 }
+@article{Rosenberg1986,
+author = {Rosenberg, Andrew A. and Beddington, J.R. and Basson, M.},
+file = {:Users/mauriciomardones/REFERENCIAS/Life{\_}history{\_}parameters/Crecimiento/Rosenberg 1986 - Growth longevity krill pelagic whaling.pdf:pdf},
+journal = {Nature},
+mendeley-groups = {DOCAS/LH{\_}Parameters},
+title = {{Growth and longevity of krill during the firts decade of pelagic whalling}},
+volume = {324},
+year = {1986}
+}
